--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Lilita+One&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
   <title>Frontend Mentor | E-commerce product page</title>
@@ -44,6 +45,9 @@
     </section>
     <section id="contenedor2" class="contenedor2">
       <div class="regalo">
+        <div class="oferta">
+          <p>50</p>
+        </div>
         <img src="images/imagen1.jpg" alt="product">
         <div class="detalle">
           <p>Detalle</p>
