--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           </div>
         </ul>
       </div>
+      <div class="telefono">
+        <a target="_blank" href="tel:+51989872591">
+          +51 989 872 591
+        </a>
+      </div>
     </section>
     <section id="contenedor2" class="contenedor2">
       <div class="regalo">
@@ -124,6 +129,11 @@
     <section class="contenedor6">
       <div class="sombra"></div>
     </section>
+  </section>
+  <section class="whatsapp">
+    <a target="_blank" href="https://wa.me/51989872591">
+      <img src="images/whatsapp.png" alt="WhatsApp">
+    </a>
   </section>
 </body>
 <script src="script.js"></script>
