--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
-  <title>Frontend Mentor | E-commerce product page</title>
+  <title>❤️ Emprendimiento AS ❤️</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
