--- a/index.html
+++ b/index.html
@@ -36,11 +36,35 @@
           </div>
         </ul>
       </div>
-      <div class="telefono">
+      <div class="telefono2" style="padding-top: 1em;">
         <a target="_blank" href="tel:+51989872591">
-          +51 989 872 591
+          <img src="images/icons8-featurephone-50.png" alt="fb">
         </a>
       </div>
+      <div class="whatsapp2" style="padding-top: 1em;">
+        <a target="_blank" href="https://wa.me/51989872591">
+          <img src="images/icons8-whatsapp.svg" alt="fb">
+        </a>
+      </div>
+      <div class="tiktok" style="padding-top: 1em;">
+        <a target="_blank" href="https://www.tiktok.com/@sandraserratovarg?_t=ZM-8tR4x5upENq&_r=1">
+          <img src="images/icons8-tik-tok.svg" alt="fb">
+        </a>
+      </div>
+      <div class="facebook" style="padding-top: 1em;">
+        <a target="_blank" href="https://web.facebook.com/profile.php?id=61572508803636">
+          <img src="images/icons8-facebook.svg" alt="fb">
+        </a>
+      </div>
+      <div class="instagram" style="padding-top: 1em;">
+        <a target="_blank"
+          href="https://www.instagram.com/regalitos_14_de_febrero_amor?utm_source=qr&igsh=ZHJrN256cnM1M2hm">
+          <img src="images/icons8-instagram.svg" alt="fb">
+        </a>
+      </div>
+    </section>
+    <section class="portada">
+      <img src="images/portada10.jpg" alt="portada1">
     </section>
     <section id="contenedor2" class="contenedor2">
       <div class="regalo">
