--- a/index.html
+++ b/index.html
@@ -7,159 +7,260 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Lilita+One&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Agu+Display&family=Kumbh+Sans:wght@100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 
   <title>❤️ Emprendimiento AS ❤️</title>
 </head>
 
 <body>
-  <section class="contenedor">
-    <section class="contenedor1">
-      <div class="icono_menu">
-        <img src="images/icon-menu.svg" alt="menu">
-      </div>
-      <div class="logo">
-        <img src="images/logo.png" alt="logo" class="logo">
-      </div>
-      <div class="menu">
-        <ul class="navegador">
-          <div class="raya">
-            <li><a href="index.html">Regalos❤️</a></li>
+  <section class="navegador">
+    <div class="navegador_logo">
+      <img src="images/logo.png" alt="logo">
+    </div>
+    <div class="navegador_nav">
+      <nav class="navegador_nav_menu">
+        <ul class="navegador_nav_menu_items">
+          <div class="navegador_nav_menu_items_item">
+            <li><a href="index.html">❤️Nostros❤️</a></li>
           </div>
-          <div class="raya">
-            <li><a href="personalizado.html">Personalizado❤️</a></li>
+          <div class="navegador_nav_menu_items_item">
+            <li><a href="index.html">❤️Lista❤️</a></li>
           </div>
-          <div class="raya">
-            <li><a href="extra.html">Extra❤️</a></li>
+          <div class="navegador_nav_menu_items_item">
+            <li><a href="index.html">❤️Carta❤️</a></li>
           </div>
         </ul>
+      </nav>
+    </div>
+    <div class="navegador_contacto">
+      <div class="navegador_contacto_texto"><strong>CONTACTANOS</strong></div>
+      <div class="navegador_contacto_texto">989 872 591</div>
+      <div class="navegador_contacto_texto">951 658 060</div>
+    </div>
+  </section>
+  <section class="portada">
+    <div class="portada_antes">
+      <img src="images/icon-previous.svg" alt="previous">
+    </div>
+    <div class="portada_imagen">
+      <img src="images/portada1.jpg" alt="portada">
+    </div>
+    <div class="portada_despues">
+      <img src="images/icon-next.svg" alt="next">
+    </div>
+  </section>
+  <div class="titulo_producto">
+    <img src="images/corazon.png">
+    <h1>NUESTROS PRODUCTOS</h1>
+    <img src="images/corazon.png">
+  </div>
+  <section class="lista">
+    <div class="lista_regalo">
+      <div class="lista_regalo_foto">
+        <img id="producto-imagen" src="images/imagen1.jpg" alt="imagen1">
       </div>
-      <div class="telefono2" style="padding-top: 1em;">
-        <a target="_blank" href="tel:+51989872591">
-          <img src="images/icons8-featurephone-50.png" alt="fb">
-        </a>
+      <div id="producto-precio" class="lista_regalo_precio">s/ 200.00</div>
+    </div>
+    <div class="lista_regalo">
+      <div class="lista_regalo_foto">
+        <img id="producto-imagen" src="images/imagen2.jpg" alt="imagen2">
       </div>
-      <div class="whatsapp2" style="padding-top: 1em;">
-        <a target="_blank" href="https://wa.me/51989872591">
-          <img src="images/icons8-whatsapp.svg" alt="fb">
-        </a>
+      <div id="producto-precio" class="lista_regalo_precio">s/ 200.00</div>
+    </div>
+    <div class="lista_regalo">
+      <div class="lista_regalo_foto">
+        <img id="producto-imagen" src="images/imagen3.jpg" alt="imagen3">
       </div>
-      <div class="tiktok" style="padding-top: 1em;">
-        <a target="_blank" href="https://www.tiktok.com/@sandraserratovarg?_t=ZM-8tR4x5upENq&_r=1">
-          <img src="images/icons8-tik-tok.svg" alt="fb">
-        </a>
+      <div id="producto-precio" class="lista_regalo_precio">s/ 200.00</div>
+    </div>
+    <div class="lista_regalo">
+      <div class="lista_regalo_foto">
+        <img id="producto-imagen" src="images/imagen4.jpg" alt="imagen4">
       </div>
-      <div class="facebook" style="padding-top: 1em;">
-        <a target="_blank" href="https://web.facebook.com/profile.php?id=61572508803636">
-          <img src="images/icons8-facebook.svg" alt="fb">
-        </a>
+      <div id="producto-precio" class="lista_regalo_precio">s/ 200.00</div>
+    </div>
+  </section>
+  <div class="titulo_producto">
+    <img src="images/corazon.png">
+    <h1>REGALOS PERSONALIZADOS</h1>
+    <img src="images/corazon.png">
+  </div>
+  <section class="regalo">
+    <div class="regalo_personal">
+      <div class="regalo_personal_foto">
+        <img class="imagen" src="images/regalo1.jpg">
       </div>
-      <div class="instagram" style="padding-top: 1em;">
-        <a target="_blank"
-          href="https://www.instagram.com/regalitos_14_de_febrero_amor?utm_source=qr&igsh=ZHJrN256cnM1M2hm">
-          <img src="images/icons8-instagram.svg" alt="fb">
-        </a>
-      </div>
-    </section>
-    <section class="portada">
-      <img src="images/portada10.jpg" alt="portada1">
-    </section>
-    <section id="contenedor2" class="contenedor2">
-      <div class="regalo">
-        <div class="oferta">
-          <p>50</p>
-        </div>
-        <img src="images/imagen1.jpg" alt="product">
-        <div class="detalle">
-          <p>Detalle</p>
-        </div>
-      </div>
-    </section>
-    <section id="contenedor3" class="contenedor3">
-      <div class="imagenes">
-        <div class="imagen_principal">
-          <img id="imagenDetalle" src="images/imagen1.jpg" alt="product">
-        </div>
-      </div>
-      <div class="regreso_lista">
-        <h2>Regresar</h2>
-      </div>
-      <div id="detallesProducto" class="compra">
-        <div class="texto">
-          <h3>Emprendimiento AS</h3>
-          <h1>Detalles</h1>
-          <p class="detalle1">20 muñequitos Kmoromi</p>
-          <p class="detalle2">Un llavero grande Knoromi</p>
-          <p class="detalle3">Peluche suavecito Kmoromi</p>
-          <p class="detalle4">Cajita de felíz día</p>
-        </div>
-        <div class="cuenta">
-          <div class="precio_descuento">s/. <span class="precio">50</span>.00</div>
-        </div>
-      </div>
-    </section>
-    <section class="contenedor4">
-      <div class="atras">
-        <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
-          <path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
-        </svg>
-      </div>
-      <div class="adelante">
-        <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
-          <path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
-        </svg>
-      </div>
-      <div class="cuadro_fotos">
-        <div class="cerrar">
-          <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
-              fill="#69707D" fill-rule="evenodd" />
-          </svg>
-        </div>
-        <div class="fotos">
-          <div class="foto_principal">
-            <img id="imagenPrincipal" src="images/imagen1.jpg" alt="product">
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
+            </div>
+            <div>
+              <p>Promoción</p>
+            </div>
+          </div>
+          <h1>TAZA PERSONZALIZADA</h1>
+          <h2>¡Un extra de amor en su mesa!</h2>
+          <p>Usa nuestros diseños para crear una taza alucinante con las fotos más románticas y alegrarle cada desayuno.
+          </p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
           </div>
         </div>
       </div>
-    </section>
-    <section class="contenedor5">
-      <div class="menu_total">
-        <div class="cerrar_nuevo">
-          <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
-              fill="#69707D" fill-rule="evenodd" />
-          </svg>
-        </div>
-        <div class="menu_nuevo">
-          <ul class="navegador_nuevo">
-            <div class="raya_nuevo">
-              <li><a href="index.html">Regalos❤️</a></li>
+      <div class="regalo_personal_foto">
+        <img src="images/regalo2.jpg">
+      </div>
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
             </div>
-            <div class="raya_nuevo">
-              <li><a href="personalizado.html">Personalizado❤️</a></li>
+            <div>
+              <p>Promoción</p>
             </div>
-            <div class="raya_nuevo">
-              <li><a href="extra.html">Extra❤️</a></li>
-            </div>
-          </ul>
+          </div>
+          <h1>COJÍN CON FOTOS</h1>
+          <h2>¡Para abrazar a quien más quiere!</h2>
+          <p>El cojín personalizado con fotos es una regalo doble porque además de romántico decora y es muy útil.</p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
+          </div>
         </div>
       </div>
-    </section>
-    <section class="contenedor6">
-      <div class="sombra"></div>
-    </section>
+      <div class="regalo_personal_foto">
+        <img src="images/regalo3.jpg">
+      </div>
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
+            </div>
+            <div>
+              <p>Promoción</p>
+            </div>
+          </div>
+          <h1>BOLSA DE LINO</h1>
+          <h2>¡De shopping con la mejor compañía!</h2>
+          <p>¡Disfrutará la foto mientras hace sus compras!. Sacará sonrisas allá donde vaya y presumirá de un regalo de
+            lo más original y emotivo.</p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
+          </div>
+        </div>
+      </div>
+      <div class="regalo_personal_foto">
+        <img src="images/regalo4.jpg">
+      </div>
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
+            </div>
+            <div>
+              <p>Promoción</p>
+            </div>
+          </div>
+          <h1>LLAVERO CON FOTOS</h1>
+          <h2>¡Para abrir su corazón!</h2>
+          <p>Perfecto para regalar las llaves de tu casa y de tu corazón a tu novia o novio. Un detalle barato, pero de
+            gran valor sentimental</p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
+          </div>
+        </div>
+      </div>
+      <div class="regalo_personal_foto">
+        <img src="images/regalo5.jpg">
+      </div>
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
+            </div>
+            <div>
+              <p>Promoción</p>
+            </div>
+          </div>
+          <h1>LIENZO PERSONALIZADO</h1>
+          <h2>¡Un toque de amor para su hogar!</h2>
+          <p>Hay rincones de la casa que merecen algo especial. Nada aporta mayor felicidad que ver la preciosa foto de
+            un
+            gran recuerdo junto a alguien que quieres cada día</p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
+          </div>
+        </div>
+      </div>
+      <div class="regalo_personal_foto">
+        <img src="images/regalo6.jpg">
+      </div>
+      <div class="regalo_personal_texto">
+        <div class="regalo_personal_texto_contenido">
+          <div class="regalo_personal_texto_contenido_titulo">
+            <div>
+              <img src="images/icon-menu.svg">
+            </div>
+            <div>
+              <p>Promoción</p>
+            </div>
+          </div>
+          <h1>CALENDARIO SOBREMESA</h1>
+          <h2>¡La foto que adora cada día en su mesa!</h2>
+          <p>Ya sea en la oficina o teletrabajando, gracias al calendario con vuestras fotos favoritas, estará siempre
+            en
+            la mejor compañía</p>
+          <div class="regalo_personal_texto_contenido_boton">
+            <a href="https://wa.me/51989872591" target="_blank">
+              Contactanos</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-  <section class="whatsapp">
-    <a target="_blank" href="https://wa.me/51989872591">
-      <img src="images/whatsapp.png" alt="WhatsApp">
-    </a>
+  <section class="footer"></section>
+  <section class="redes">
+    <!-- Botón para mostrar/ocultar redes -->
+    <div class="social-toggle">
+      <img src="images/ajuste.svg" alt="Menú de redes sociales">
+    </div>
+
+    <!-- Contenedor de redes sociales -->
+    <div class="social-icons">
+      <a href="https://wa.me/51989872591" class="whatsapp" target="_blank">
+        <img src="images/whatsapp.png" alt="WhatsApp">
+      </a>
+      <a href="tel:+51989872591" class="telefono" target="_blank">
+        <img src="images/icons8-featurephone-50.png" alt="Teléfono">
+      </a>
+      <a href="https://www.tiktok.com/@sandraserratovarg" class="tiktok" target="_blank">
+        <img src="images/icons8-tik-tok.svg" alt="TikTok">
+      </a>
+      <a href="https://web.facebook.com/profile.php?id=61572508803636" class="facebook" target="_blank">
+        <img src="images/icons8-facebook.svg" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/regalitos_14_de_febrero_amor" class="instagram" target="_blank">
+        <img src="images/icons8-instagram.svg" alt="Instagram">
+      </a>
+    </div>
   </section>
+
+
+
+
 </body>
-<script src="script.js"></script>
+<script src="app.js"></script>
 
 </html>
